--- a/html-study/helloworld.html
+++ b/html-study/helloworld.html
@@ -1,11 +1,56 @@
-<html>
+<!-- DOCTYPE 文档类型声明标签 告诉浏览器采用哪种HTML版本 -->
+<!DOCTYPE html>
+<!-- 显示语言 en / zh-CN -->
+<html lang="zh-CN">
 
     <head>
-        <title> hello world</title>
+        <!-- 字符集 -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>hello title</title>
     </head>
 
     <body>
-        hello world
+        <!-- <h1> - <h6> 标题标签 -->
+        <h1>一级标题</h1>
+        <h2>二级标题</h2>
+
+        <!-- <p> 段落和换行标签 -->
+        <p>段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1段落1段落1段落1段落1段落1段落1段落1段落1
+            段落1段落1</p>
+
+        <p>换行<br />标签，单标签，段落间有空隙，换行不会有空隙</p>
+
+        <!-- 文本格式化标签 -->
+        <p>
+            <strong>加粗</strong>
+            <b>加粗</b>
+            <br />
+            <em>倾斜</em>
+            <i>倾斜</i>
+            <br />
+            <del>删除线</del>
+            <s>删除线</s>
+            <br />
+            <ins>下划线</ins>
+            <u>下划线</u>
+            <br />
+        </p>
+
+        <!-- 无语义标签，用来布局 -->
+        <div>div 分割、分区，单独占一行，相当于一个盒子</div>
+        <span>span 跨度、跨距，一行可以多个，相当于小盒子</span>
+
+        <!-- 图像标签 -->
+        <h4>图像标签：</h4>
+        <img src="1.jpg" />
+
     </body>
 
 </html>
