--- a/html-study/html-tags-part1.html
+++ b/html-study/html-tags-part1.html
@@ -50,7 +50,7 @@
         <!-- 图像标签 图像要和html文件在同一文件夹 -->
         <!-- 属性之间不区分顺序，但需要在标签后面。 -->
         <!-- src属性必须要写 -->
-        <h3>图像标签：</h3>
+        <h3 id="pic">图像标签：</h3> <!-- id用于锚点链接跳转 -->
         <h4>alt 替换文本，图片不能显示时用文字替换：</h4>
         <img src="1.jpg" alt="fail" />
         <h4>title 提示文本，鼠标放在图像上的提示：</h4>
@@ -80,6 +80,19 @@
         <a href="#">空链接</a>
         <h4>4.网页元素链接</h4>
         <a href="https://ys.mihoyo.com/"><img src="images/1.jpg" alt="fail" title="Furina" width="300" /></a>
+        <h4>5.锚点链接</h4>
+        <a href="#pic">Furina</a>
+
+        <!-- 注释和特殊字符 -->
+        <!-- 
+            空格    &nbsp;
+            <       &lt;
+            >       &gt;
+            &       &amp;
+            x       &times;
+            ÷       &divide;
+            °       &deg;
+         -->
 
     </body>
 
